# food-destroying-system

./: .gitignore  docker-compose.yml
backend/: .env  Dockerfile  README.md  pyproject.toml  setup.sh  start.sh
backend/src/: app.py  config.py
backend/src/common/: common.py  seed.py
backend/src/model/: category.py  customer.py  dispatcher.py  employee.py  food.py  manager.py  order.py  payement.py  receipt.py  setitem.py  setmenu.py  user.py
frontend/: .gitignore  Dockerfile  package.json  webpack.config.js
frontend/public/: global.css  index.html  particles.json
frontend/src/: Root.svelte  api.js  main.js  storage.js  stores.js
frontend/src/components/: AttendanceTable.svelte  EventTable.svelte  Navbar.svelte  OrderState.js
frontend/src/views/: Cart.svelte  CreateCategory.svelte  CreateFoodItem.svelte  CreateSetItem.svelte  CreateSetMenu.svelte  Dashboard.svelte  Login.svelte  Menu.svelte  Router.svelte  UpdateFood.svelte  ViewAllOrders.svelte  ViewMyOrders.svelte  ViewReceipt.svelte
